2003-02-18  Jan Ploski  <jpljpl@gmx.de>

	* src/dump.cpp: Fix segfault with +c +L and files that
	don't start with a comment. bug #3519 - regresion tested
	by Max Horn <max@quendi.de>

2002-12-18  Eric Blake  <ebb9@email.byu.edu>

	* src/platform.h (IntToString, LongToString): Backport from
	generics-branch.
	* src/expr.cpp: 
	* src/platform.cpp: Use updated tostring classes.
	* configure.in: Bump version number.
	* src/Makefile.am: Improve compile dependences.
	* Makefile.in:
	* aclocal.m4:
	* config.guess:
	* config.sub:
	* configure:
	* install-sh:
	* doc/Makefile.in:
	* src/Makefile.in: Regenerate with newer autotools versions.

2002-12-13  Eric Blake  <ebb9@email.byu.edu>

	* src/getclass.cpp (ProcessClassFile): Fix segfault when class
	file has invalid (or missing) supertype - bug 3404.

2002-12-10  Eric Blake  <ebb9@email.byu.edu>

	* src/platform.cpp (DoubleToString):
	* src/op.cpp (OpLine, OpDmp): Fix regressions in last commit.

2002-12-10  Eric Blake  <ebb9@email.byu.edu>

	* src/tuple.h: Backport and improve generics-branch handling of
	tuples; length is now unsigned instead of int.
	* src/access.h:
	* src/ast.h:
	* src/body.cpp:
	* src/bytecode.cpp:
	* src/bytecode.h:
	* src/class.h:
	* src/control.cpp:
	* src/control.h:
	* src/decl.cpp:
	* src/definite.cpp:
	* src/depend.cpp:
	* src/diagnose.cpp:
	* src/double.h:
	* src/error.cpp:
	* src/error.h:
	* src/expr.cpp:
	* src/getclass.cpp:
	* src/incrmnt.cpp:
	* src/jikesapi.cpp:
	* src/long.h:
	* src/lookup.cpp:
	* src/lookup.h:
	* src/platform.cpp:
	* src/platform.h:
	* src/scanner.cpp:
	* src/segment.cpp:
	* src/segment.h:
	* src/semantic.h:
	* src/set.cpp:
	* src/set.h:
	* src/stream.cpp:
	* src/stream.h:
	* src/symbol.cpp:
	* src/symbol.h:
	* src/system.cpp:
	* src/table.h: Changes associated with tuples; more const-safety.

2002-12-10  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.cpp:
	* src/ast.h:
	* src/control.h:
	* src/diagnose.cpp:
	* src/error.cpp:
	* src/expr.cpp:
	* src/jikesapi.cpp: